<resources>
    <string name="app_name">myTasks</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="contentDescriptionFABTareas">Añadir tarea</string>
    <string name="detalles">Detalles</string>
    <string name="t_tulo_de_la_tarea">Título de la tarea</string>
    <string name="txtFecha">Fecha</string>
    <string name="btnFecha">Fecha</string>
    <string name="t_tulo_del_evento">Titulo del Evento</string>
    <string name="Ubicación">ubicacion</string>
    <string name="ubicacion">Ubicación</string>
    <string name="txtHora">Hora</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="btnAñadirUbicacion">Añadir ubicación al evento</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tareas">Tareas</string>
    <string name="menu_actividades">Actividades</string>
    <string name="action_logout">Cerrar Sesion</string>
    <string name="menu_eventos">Eventos</string>
</resources>